# video-cli

./: README.md  cut.py  main.py  pyproject.toml  videocut.bat
src/: __init__.py
src/util/: __init__.py  abbreviate.py
